//fixed collapsing contents in group in calendar //done selectable selection helper border //removed div.sort area from template, drag picture instead
git-svn-id: https://kladecinfo.googlecode.com/svn/trunk@267 b2ecd63b-ce3e-1a2e-dd73-34ad02cb03ca

--- a/kladecytI/web/playlist.css
+++ b/kladecytI/web/playlist.css
@@ -58,3 +58,4 @@ body { height: 100%; }
 .pti-state-default.ui-selected>div { background-color: orange!important; }
 .pti-state-default.ui-selected.selected>div { background-color: orangered!important; }
 .ui-state-highlight { float:left!important; position:relative!important; width: 50%!important; height: 91px!important; margin: 0px; padding: 0px; border: none;}
+.ui-selectable-helper { position: absolute; z-index: 100; border:1px dotted black; }
